<resources>
    <string name="app_name">Maréu</string>
    <string name="add_meeting_fab">Fab to create a new meeting</string>
    <string name="meeting_item_sample1">Sujet - Heure - Salle</string>
    <string name="meeting_item_sample2">Liste des participants</string>
    <string name="room_icon">Icon of the meeting room</string>
    <string name="delete_btn">Btn to delete a meeting</string>
    <string name="room_filter">Filter meetings by room</string>
    <string name="time_filter">Filter meetings by hour</string>
    <string name="meeting_topic">Sujet</string>
    <string name="meeting_attendees">Participants</string>
    <string name="meeting_attendees2">Voir les participants</string>
    <string name="add">Ajouter</string>
    <string name="meeting_time">Heure</string>
    <string name="room_spinner">Spinner to choose a meeting room</string>
    <string name="example">Example</string>
    <string name="saved">"Réunion enregistrée</string>
    <string name="hide">MASQUER LES PARTICIPANTS</string>
    <string name="show">VOIR LES PARTICIPANTS</string>
    <string name="topic_error">Veuillez renseigner un sujet</string>
    <string name="attendees_error">Veuillez ajouter des participants</string>
    <string name="time_error">Veuillez choisir une heure</string>
    <string name="room_search_txt">Filtrer par salle</string>
    <string name="time_search_txt">Filtrer par heure</string>
...
