...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/topic_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="8dp"
...
                app:boxBackgroundColor="@color/bckgrnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topic_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/meeting_topic"
                    android:imeOptions="actionNext"
...
                    app:drawableStartCompat="@drawable/ic_baseline_topic_24"
                    app:drawableTint="@color/field" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/attendees_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:boxBackgroundColor="@color/bckgrnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topic_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/attendees_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/meeting_attendees"
                    android:imeOptions="actionDone"
...
                    android:textColor="@color/field"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_baseline_group_24"
                    app:drawableTint="@color/field" />

                <Button
                    android:id="@+id/add_attendee_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/bckgrnd"
...
                    android:layout_height="wrap_content"
                    app:chipSpacingVertical="8dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/back_fields_drawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_group_layout">

                <TextView
                    android:id="@+id/time_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/meeting_time"
...
                    app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
                    app:drawableTint="@color/field" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/room_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/back_fields_drawable"
...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/check_add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_meeting_fab"
        android:minWidth="48dp"
...
