<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/meetings_menu_room_filter"
        android:icon="@drawable/ic_baseline_meeting_room_24"
        android:title="@string/room_filter"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/meetings_menu_time_filter"
        android:icon="@drawable/ic_baseline_av_timer_24"
        android:title="@string/time_filter"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>
